# os_pipe.rs

./: .travis.yml  Cargo.toml  README.md  README.tpl  appveyor.yml
.github/workflows/: ci.yml
src/: lib.rs  unix.rs  weak.rs  windows.rs
src/unix/: cvt.rs  fd.rs  mod.rs  pipe.rs  weak.rs
test/cat/src/: main.rs
test/swap/: Cargo.toml  README
test/swap/src/: main.rs
test/tee/: Cargo.toml  README
test/tee/src/: main.rs
