[package]
name = "os_pipe"
version = "1.1.0"
authors = ["Jack O'Connor"]
description = "a cross-platform library for opening OS pipes"
repository = "https://github.com/oconnor663/os_pipe.rs"
readme = "README.md"
documentation = "https://docs.rs/os_pipe"
license = "MIT"
keywords = ["pipe", "pipe2", "createpipe", "dup"]
edition = "2018"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.62"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["handleapi", "namedpipeapi", "processthreadsapi", "winnt"] }

[features]
# Uses I/O safety features introduced in Rust 1.63
io_safety = []

# Document `io_safety` conversions on docs.rs.
[package.metadata.docs.rs]
features = ["io_safety"]
