[package]
name = "os_pipe"
version = "1.2.0"
authors = ["Jack O'Connor"]
description = "a cross-platform library for opening OS pipes"
repository = "https://github.com/oconnor663/os_pipe.rs"
readme = "README.md"
documentation = "https://docs.rs/os_pipe"
license = "MIT"
keywords = ["pipe", "pipe2", "createpipe", "dup"]
edition = "2021"
rust-version = "1.63"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.62"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_Security"] }

[features]
# Integration with IO safety types like OwnedFd is now always enabled, and this
# feature does nothing. When something like github.com/rust-lang/rfcs/pull/3486
# lands, this feature will be deprecated.
io_safety = []
